feat(chore): Trips list implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TripViewer</string>
+
+    <string name="error_loading_trips">Could not fetch trips</string>
+    <string name="start_time">Start: %1$s</string>
+    <string name="end_time">End: %1$s</string>
+    <string name="start_city">Start city: %1$s</string>
+    <string name="end_city">End city: %1$s</string>
 </resources>
